<resources>
    <string name="app_name">AndroidTutorial</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="first_chapter_text">Project Structure</string>
    <string name="second_chapter_text">Activities</string>
    <string name="third_chapter_text">Postcards</string>
    <string name="fourth_chapter_text">Places to see</string>
    <string name="fifth_chapter_text">Tourist Traps</string>
    <string name="sixth_chapter_text">Intents</string>
    <string name="seventh_chapter_text">Photography</string>
    <string name="eighth_chapter_text">Travel</string>
    <string name="ninth_chapter_text">Your guides</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="slide_title_2">Android Training 101</string>
    <string name="slide_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="slide_title_3">Let\'s Begin</string>
    <string name="slide_text_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="get_started_button">Get Started</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="create_activity_title">Create your activity</string>
    <string name="start_activity_title">Start your activity</string>
    <string name="resume_activity_title">Resume your activity</string>
    <string name="pause_activity_title">Pause your activity</string>
    <string name="stop_activity_title">Stop your activity</string>
    <string name="pause_activity_toast">Your activity has been paused</string>
    <string name="stop_activity_toast">Your activity has been stopped</string>
    <string name="snack_bar_message">You have added %s to your favourite places</string>
    <string name="add_marker">Add Marker</string>
    <string name="my_marker">My Marker</string>
    <string name="button_pause_activity">Pause Activity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="error_creating_file">There was an error accessing the camera</string>
    <string name="toast_permission_denied">You do not have permission to use camera. Change access from Settings</string>
    <string name="postcard_details_destination">Destination: %s</string>
    <string name="postcard_details_date">Date: %s</string>
    <string name="postcard_details_edit_destination">Destination</string>
    <string name="postcard_details_edit_date">Date</string>
    <string name="postcard_details_edit_text">Here enter the postcard message.</string>
    <string name="postcard_details_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="postcard_details_edit">EDIT</string>
    <string name="postcard_details_delete">DELETE</string>
    <string name="postcard_details_save">SAVE</string>
    <string name="postcard_validation_message">Please fill in all the fields!</string>
    <string name="postcard_confirmation_message">Are you sure you want to discard the filled in data?</string>
    <string name="title_activity_maps">Map</string>
</resources>