<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".intro.MenuActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <Button
            android:id="@+id/first_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/first_chapter_text" />

        <Button
            android:id="@+id/second_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/second_chapter_text" />

        <Button
            android:id="@+id/third_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/third_chapter_text" />

        <Button
            android:id="@+id/fourth_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/fourth_chapter_text" />

        <Button
            android:id="@+id/fifth_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/fifth_chapter_text" />

        <Button
            android:id="@+id/sixth_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/sixth_chapter_text" />

        <Button
            android:id="@+id/seventh_chapter_button"
            style="@style/MenuActivity.Chapter.Button"
            android:layout_height="wrap_content"
            android:text="@string/seventh_chapter_text" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
