<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:id="@+id/top_image_view"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/create_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_activity_title"
        android:visibility="gone" />

    <TextView

        android:id="@+id/create_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/start_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_activity_title"
        android:visibility="gone" />

    <TextView
        android:id="@+id/start_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/resume_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_activity_title"
        android:visibility="gone" />

    <TextView
        android:id="@+id/resume_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pause_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_activity_title"
        android:visibility="gone" />

    <TextView
        android:id="@+id/pause_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:visibility="gone" />

    <TextView
        android:id="@+id/stop_title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_activity_title"
        android:visibility="gone" />

    <TextView
        android:id="@+id/stop_description_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pause_activity"
        android:id="@+id/pause_activity_button" />
</LinearLayout>